<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="miles">Miles</string>
    <string name="km">KM</string>
    
    <string name="exit">Exit</string>
    
    <string name="app_name">Distance Calculator Free</string>
<string name="start">Start Calculating</string>
<string name="stop">Stop</string>
<string name="dots">. . . .</string>
<string name="service_not_available">Unable to locate you using GPS</string>
<string name="service_temp_not_available">Trying to find your location</string>

<string name="empty"></string>
<string name="notificationTitle">Distance Calculator</string>
<string name="notificationMsg">Using GPS to calculate distance</string>
<string name="distance_unit">Distance Unit</string>



<string name="settings">Settings</string>
<string name="distance_unit_summ">Unit in which distance is calculated</string>
<string name="walking">Walking</string>
<string name="biking">Biking</string>
<string name="driving">Driving</string>

<string name="action">Action</string>
<string name="action_summ">Choose what you are doing for optimal battery performance</string>
<dimen name="smallTextSize">15sp</dimen><string-array name="distanceUnitValues"><item>km</item>
<item>miles</item>
</string-array><string-array name="actions"><item>@string/walking</item>
<item>@string/driving</item>
<item>@string/biking</item>
</string-array>
<string-array name="actionValues"><item>walking</item>
<item>driving</item>
<item>biking</item>
</string-array>
<string-array name="distanceUnits"><item>@string/km</item>
<item>@string/miles</item>
</string-array>
<string name="Hr">Hr</string>

<string name="currSpeedFormat" formatted="false">Current speed: %.2f %s/%s</string>
<string name="help">Help</string>
<string name="capture">Capture</string>
<string name="msg_no_storage">No external storage found to save screenshot</string>
<string name="msg_file_saved">File saved at %s</string>
<string name="current_action">Action: %s</string>
<string name="msg_unable_to_save">Unable to save screenshot to storage</string>



<string name="timeElapsedFormat">Total time: %s</string>
<string name="pause">Pause</string>
<string name="resume">Resume</string>
<string name="report">Summary</string>
<string name="back">Back</string><dimen name="mediumTextSize">20sp</dimen><dimen name="largeTextSize">25sp</dimen><dimen name="warningTextSize">12sp</dimen>
<string name="reportGenerationError">Report cannot be generated at this moment. Please try again later.</string>
<string name="reportTitle">Distance Calculator Summary</string>
<string name="reportDistanceSectionHeader">Distance</string>
<string name="totalDistance">Total Distance</string>
<string name="reportSpeedSectionHeader">Speed</string>
<string name="minimumSpeed">Minimum Speed</string>
<string name="maximumSpeed">Maximum Speed</string>
<string name="averageSpeed">Average Speed</string>
<string name="reportTimeSectionHeader">Time</string>
<string name="totalTimeTaken">Total Time Taken</string>
<string name="totalPauseTime">Total Pause Time</string>
<string name="reportGeneratedAt">Report Generated At</string>
<string name="accuracyWarning">WARNING: All measurements are as accurate as GPS on your device</string>
<string name="prefAutoReport">Auto Report</string>
<string name="prefAutoReportSummOn">Report will be displayed when calculator is stopped</string>
<string name="prefAutoReportSummOff">Report will not be displayed when calculator is stopped</string>
<string name="prefMeasurementUnit">Measurement Unit</string>
<string name="prefMisc">Misc</string>
<string name="prefAutoSave">Auto Save</string>
<string name="prefAutoSaveSummOn">Report will be saved automatically when calculator is stopped</string>
<string name="prefAutoSaveSummOff">Report will not be saved automatically when calculator is stopped</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="enableGpsDialogMsg">GPS is not enabled. Do you want to enable it now?</string>
<string name="share">Share</string>
</resources>
