<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/report" >
        <CheckBoxPreference
            android:title="@string/prefAutoReport"
            android:key="autoReport"
            android:defaultValue="false"
            android:summaryOn="@string/prefAutoReportSummOn"
            android:summaryOff="@string/prefAutoReportSummOff"
        />
        <CheckBoxPreference
            android:title="@string/prefAutoSave"
            android:key="autoSave"
            android:dependency="autoReport"
            android:defaultValue="false"
            android:summaryOn="@string/prefAutoSaveSummOn"
            android:summaryOff="@string/prefAutoSaveSummOff"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefMeasurementUnit">
        <ListPreference
            android:title="@string/distance_unit"
            android:summary="@string/distance_unit_summ"
            android:key="distanceUnit"
            android:defaultValue="miles"
            android:entries="@array/distanceUnits"
            android:entryValues="@array/distanceUnitValues" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefMisc">
        <ListPreference
            android:title="@string/action"
            android:summary="@string/action_summ"
            android:key="action"
            android:defaultValue="biking"
            android:entries="@array/actions"
            android:entryValues="@array/actionValues" />
    </PreferenceCategory>
</PreferenceScreen>